--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/web;
         listen       80;
         server_name  127.0.0.1 localhost;
 
