--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,5 +27,9 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
+
+        location ~ /\.(ht|svn|git) {
+                deny all;
+            }
     }
 }
