add working_dir for php container
With this change we can run yii console command by 'docker-compose exec php php yii'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       ${APP}_php
     volumes:
       - ../../app/mywebdev/app:/usr/share/nginx/html
+    working_dir: /usr/share/nginx/html
     depends_on:
       - mariadb
     environment:
