--- a/.env_sample
+++ b/.env_sample
@@ -1,17 +1,19 @@
 # app name for containers names
 APP=mywebdev
 
+APP_PATH=../mywebdev/app
+
 # subnet ip
 SUBNET=192.168.250.0/28
 
 # mariadb version
-MARIA_VER=10.3
+MARIA_VER=10.4
 
 # mariadb port
 MARIA_PORT=3334
 
 # nginx version
-NGINX_VER=1.14
+NGINX_VER=1.17
 
 # nginx port
 NGINX_PORT=8080
