--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - ${NGINX_PORT}:80
     volumes:
-      - ../../app/mywebdev/app:/usr/share/nginx/html
+      - ${APP_PATH}:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - php
@@ -22,7 +22,7 @@ services:
     container_name:
       ${APP}_php
     volumes:
-      - ../../app/mywebdev/app:/usr/share/nginx/html
+      - ${APP_PATH}:/usr/share/nginx/html
     depends_on:
       - mariadb
     environment:
