--- a/.env_sample
+++ b/.env_sample
@@ -20,3 +20,6 @@ NGINX_PORT=8080
 
 # phpmyadmin port
 PMA_PORT=8787
+
+# xdebug config
+XDEBUG_CONFIG=remote_host=host.docker.internal remote_enable=1
