Add COMPOSE_PROJECT_NAME variable
It makes different networks for projects wich use this docker-compose config in the same time on one PC

--- a/.env_sample
+++ b/.env_sample
@@ -23,3 +23,6 @@ PMA_PORT=8787
 
 # xdebug config
 XDEBUG_CONFIG=remote_host=host.docker.internal remote_enable=1
+
+# project name for network naming
+COMPOSE_PROJECT_NAME=rfk
